added a new paragraph tag to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello, Git!</h1>
     <p>This is my first time using Git</p>
+    <p>This paragraph tag wasn't here in the first place</p>
 </body>
 
 </html>
