added a list to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <h1>Hello, Git!</h1>
     <p>This is my first time using Git</p>
     <p>This paragraph tag wasn't here in the first place</p>
+
+    <div>
+        <h2>Some commands I need to remember:</h2>
+        <ul>
+            <li>git init</li>
+            <li>git status</li>
+            <li>git add</li>
+            <li>git commit -m <span class="commands">- message here -</span></li>
+            <li>git remote add origin <span class="commands">- repository URL here -</span></li>
+            <li>git branch -M main</li>
+            <li>git push -u origin main</li>
+        </ul>
+    </div>
 </body>
 
 </html>
